table design - firefox scrollbar fix

--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@
     border: none;
     background: none;
     box-sizing: border-box;
+    scrollbar-width: thin;
+    scrollbar-color: var(--light-purple) #ffffff;
 }
 
 a, button {
@@ -126,8 +128,7 @@ input:not([type="radio"]):focus, select:focus {
     width: 100%;
 }
 
-[type="text"]:focus + label ,[type="number"]:focus + label
-,[type="text"]:not([value='']) + label ,[type="number"]:not([value='']) + label{
+[type="text"]:focus + label, [type="number"]:focus + label, [type="text"]:not([value='']) + label, [type="number"]:not([value='']) + label {
     top: -30%;
     bottom: 10px;
     left: 0.5rem;
@@ -181,6 +182,7 @@ select, [type="date"] {
     filter: saturate(150%);
     padding: 0.7rem 2rem;
 }
+
 .secondary-btn {
     background-color: var(--light-purple);
     padding: 0.7rem 1.7rem;
@@ -189,6 +191,7 @@ select, [type="date"] {
     border-radius: 0.5rem;
     transition: all ease-in-out 400ms;
 }
+
 .secondary-btn:hover {
     filter: saturate(150%);
     padding: 0.7rem 2rem;
@@ -237,7 +240,7 @@ label:has([type="radio"]:checked) {
 }
 
 /*/////////////////////////////*/
-.table {
+#table {
     display: flex;
     flex-direction: column;
     background-color: #FFFFFF;
@@ -251,6 +254,7 @@ label:has([type="radio"]:checked) {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    width: 100%;
 }
 
 .row:first-child {
@@ -269,8 +273,8 @@ label:has([type="radio"]:checked) {
     justify-content: center;
     align-items: center;
     height: 3.5rem;
-    width: 100%;
     min-width: 10rem;
+    width: 100%;
 }
 
 .column:nth-child(3), .column:nth-child(6) {
@@ -281,10 +285,12 @@ label:has([type="radio"]:checked) {
 .column:not(:last-child) {
     border-right: 1px solid var(--light-gray);
 }
+
 .column:last-child {
     display: flex;
     gap: 1rem;
 }
+
 /*//////////////////////////////////*/
 
 #modal {
@@ -298,6 +304,7 @@ label:has([type="radio"]:checked) {
     border-radius: 1.5rem;
     overflow: clip;
 }
+
 #purple {
     background-color: var(--purple);
     width: 100%;
@@ -306,6 +313,7 @@ label:has([type="radio"]:checked) {
     top: 0;
     left: 0;
 }
-.valid, .valid +label {
-    border-color: green !important ;
+
+.valid, .valid + label {
+    border-color: green !important;
 }
